--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "install": "^0.13.0",
     "nodemon": "^2.0.6",
     "npm": "^6.14.9",
+    "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
     "ts-node": "^9.0.0",
     "typedi": "^0.8.0",
