Add types and remove unused code 🧹

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "allowUnreachableCode": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": false
+    "sourceMap": false,
+    "noImplicitAny": true,
+    "allowUnusedLabels": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   }
 }
