--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noImplicitAny": true,
     "allowUnusedLabels": false,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "outDir": "build"
   }
 }
