--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13"
   },
