--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "pug": "^3.0.0",
     "reflect-metadata": "^0.1.13"
   },
   "husky": {
