--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch 'test/**' --ext 'ts,json' --ignore 'test/**/*.spec.ts' --exec 'ts-node test/server.ts'",
+    "prebuild": "postcss ./src/doc/styles/src.css -o ./src/doc/styles/out.css",
     "build": "tsc"
   },
   "keywords": [],
@@ -12,12 +13,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "autoprefixer": "^9.8.6",
+    "cssnano": "^4.1.10",
     "husky": "^4.3.0",
     "install": "^0.13.0",
     "nodemon": "^2.0.6",
     "npm": "^6.14.9",
+    "postcss": "^8.1.10",
+    "postcss-cli": "^8.3.0",
     "prettier": "^2.2.0",
     "pretty-quick": "^3.1.0",
+    "tailwindcss": "^2.0.1",
     "ts-node": "^9.0.0",
     "typedi": "^0.8.0",
     "typescript": "^4.1.2"
