--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged --ignore-path='./src/**/*.css'"
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
